--- a/gris.css
+++ b/gris.css
@@ -310,21 +310,13 @@ html, body {
 
 
 .linha-estatuas {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); 
-  gap: 30px; 
+  display: flex;
+  gap: 20px; 
+  flex-wrap: wrap;
   justify-content: center;
-  align-self: stretch;
+  max-width: 1300px;
 }
 
-.estatua,
-.estatua-1314 {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-self: stretch;
-}
 
 .text-est-tua,
 .text-est-tua-13-14 {
@@ -353,33 +345,11 @@ html, body {
   align-self: stretch;
 }
 
-@media (max-width: 768px) {
-  .linha-estatuas {
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 20px;
-  }
-
-  .linha-5-estatuas {
-    padding: 0 100px;
-  }
-}
-
-@media (max-width: 480px) {
-  .linha-estatuas {
-    grid-template-columns: 1fr; 
-    gap: 10px;
-  }
-
-  .linha-5-estatuas {
-    padding: 0 20px; 
-  }
-}
-
-
 .imageestatua,
 .imageestatua-1314 {
   border-radius: 9px;
   width: 100%;
+  max-width: 400px;
   height: auto; 
   object-fit: cover;
   transition: transform 0.3s ease, box-shadow 0.3s ease; 
@@ -397,7 +367,7 @@ html, body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  align-self: stretch;
+  align-self: center;
   transition: box-shadow 0.3s ease; 
 }
 
@@ -433,7 +403,7 @@ html, body {
 }
 
 .linha-macas {
-  padding: 10px 150px;
+  padding: 10px 5%;
   display: flex;
   gap: 108px;
   justify-content: center;
@@ -441,6 +411,8 @@ html, body {
 }
 
 .maca {
+  flex: 1 1 100%;
+  max-width: 400px; 
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -499,12 +471,13 @@ html, body {
 .linha-aves {
   display: flex;
   justify-content: center;
+  flex-wrap:wrap ;
 }
 
 .passaro {
-  flex: 1 0 32%;
-  min-width: 300px; 
-  max-width: 350px; 
+  flex: 1 0 32%; 
+  min-width: 250px;
+  max-width: 300px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -831,4 +804,102 @@ footer {
 
 .icones:hover {
   transform: scale(1.3) rotate(10deg);
+}
+
+@media (max-width: 1200px) {
+  .navbar-tipo-1 {
+    padding: 0px 40px; 
+    height: auto; 
+  }
+
+  .silk-shadows {
+    font-size: 24px; 
+    width: auto; 
+  }
+
+  .links {
+    width: 100%; 
+    flex-direction: column; 
+    gap: 20px; 
+  }
+
+  .titulo {
+    font-size: 28px; 
+  }
+
+  .linha {
+    padding: 10px 30px; 
+  }
+
+  .linha-macas{
+    flex-wrap: wrap;
+    flex-direction: column; 
+    align-self: center;
+  }
+
+  .imagemaca, .imagemaca:hover {
+    height: auto; 
+    width: 100%;
+  }
+
+  .linha-estatuas {
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .linha-5-estatuas {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar-tipo-1 {
+    flex-direction: column;
+    padding: 20px;
+    height: 100%;
+  }
+
+  .silk-shadows, .guias {
+    font-size: 20px;
+    width: auto;
+    text-align: center;
+  }
+
+  .titulo {
+    font-size: 24px;
+  }
+
+  .linha {
+    padding: 10px 10px; 
+  }
+
+  .conteudo-linha-1{
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .links {
+    flex-direction: column; 
+    gap: 10px; 
+  }
+
+  .linha-estatuas {
+    grid-template-columns: 1fr; 
+    gap: 10px;
+  }
+
+  .linha-5-estatuas {
+    padding: 0 10px; 
+  }
+  .linha-macas {
+    padding: 10px 20px; 
+  }
+  .imagemaca, .imagemaca:hover {
+    height: auto; 
+    width: 100%; 
+  }
+  .passaro {
+    flex: 1 0 100%;
+  }
 }
