--- a/paginicial.css
+++ b/paginicial.css
@@ -40,7 +40,6 @@ body {
   color: #c4cad0;
   align-items: flex-start;
   flex-direction: row;
-  align-items: flex-start;
   justify-content: flex-start;
   font-family: "Livvic", sans-serif;
   font-size: 30px;
@@ -217,10 +216,9 @@ body {
 }
 
 .img-outer:hover,
-.img-outer2:hover{
+.img-outer2:hover {
   transform: translateY(-4px);
 }
-  
 
 .frame-274 {
   padding: 10px;
@@ -366,7 +364,7 @@ footer {
   background: linear-gradient(180deg,
       rgba(45, 25, 118, 1) 0%,
       rgba(46, 26, 86, 1) 100%);
-  padding: 24px 80px 24px 80px;
+  padding: 24px 80px;
   display: flex;
   flex-direction: row;
   gap: 48px;
@@ -409,4 +407,59 @@ footer {
 
 .icones:hover {
   transform: scale(1.3) rotate(10deg);
+}
+
+@media (max-width: 1200px) {
+  .navbar-tipo-1 {
+    padding: 0 40px; 
+  }
+  
+  .silk-shadows, .links {
+    width: auto;
+    justify-content: center; 
+  }
+
+  
+  .linha, .linha2, .linha3 {
+    flex-wrap: wrap;
+    padding: 10px; 
+    gap: 10px; 
+  }
+
+  .frame-276, .gif-outer, .video {
+    flex-direction: column; 
+    width: 100%; 
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-tipo-1 {
+    flex-direction: column; 
+    padding: 10px; 
+    height: 100%;
+  }
+  
+  .destaque {
+    padding: 20px;
+  }
+
+  .dois-jogos{
+    flex-direction: column;
+  }
+
+  .linha, .linha2, .linha3 {
+    flex-direction: column; 
+    padding: 10px; 
+    gap: 10px; 
+  }
+
+  .img-outer, .img-outer2 {
+    width: 100%; 
+    height: auto; 
+  }
+
+  .footer {
+    flex-direction: column; 
+    align-items: center;
+  }
 }
