--- a/outer.css
+++ b/outer.css
@@ -126,6 +126,22 @@ body {
   color: #5c4974;
 }
 
+#muteButton {
+  position: fixed;
+  font-family: "Livvic", sans-serif;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgba(74, 41, 145, 0.92);
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+  z-index: 1000;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 .main {
   display: flex;
   flex-direction: column;
