--- a/gris.css
+++ b/gris.css
@@ -1,13 +1,14 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   background: url('./imagens/gris_img/gris-guia-conquistas.png') center;
   background-attachment: fixed;
-  background-size: cover; 
+  background-size: cover;
   background-repeat: no-repeat;
-}  
+}
 
 .livvic-regular {
   font-family: "Livvic", serif;
@@ -16,7 +17,7 @@ html, body {
 }
 
 .livvic-bold {
-  font-family: "Livvic-bold", serif;
+  font-family: "Livvic", serif;
   font-weight: 700;
   font-style: normal;
 }
@@ -25,6 +26,7 @@ html, body {
 .gris-guia-conquistas * {
   box-sizing: border-box;
 }
+
 .gris-guia-conquistas {
   display: flex;
   flex-direction: column;
@@ -40,9 +42,9 @@ html, body {
   padding: 0px 80px;
   display: flex;
   flex-direction: row;
-  align-items: center; 
+  align-items: center;
   justify-content: space-between;
-  align-self: stretch;  
+  align-self: stretch;
   height: 48px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -138,8 +140,8 @@ html, body {
   align-items: center;
   justify-content: flex-start;
   align-self: stretch;
-  opacity: 0; 
-  transform: translateY(20px); 
+  opacity: 0;
+  transform: translateY(20px);
   animation: fadeInUp 0.5s forwards;
 }
 
@@ -153,11 +155,11 @@ html, body {
 .titulo {
   color: #c4cad0;
   text-align: left;
-  font-family: "Livvic-bold", sans-serif;
+  align-self: flex-start;
+  font-family: "Livvic", sans-serif;
   font-size: 36px;
-  line-height: 140%;
+  line-height: 100%;
   font-weight: 700;
-  align-self: stretch;
   height: 50.31px;
 }
 
@@ -165,22 +167,29 @@ html, body {
   padding: 10px;
   display: flex;
   flex-direction: row;
-  gap: 57px;
+  gap: 40px;
   align-items: flex-start;
   justify-content: center;
   align-self: stretch;
 }
-.descricao, .descricao-conquistas-campanha, .descricao-conquistas-nivel, .texto-conquista {
+
+.descricao,
+.descricao-conquistas-campanha,
+.descricao-conquistas-nivel,
+.texto-conquista {
   padding: 10px;
   text-align: left;
   font-family: "Livvic", sans-serif;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 100%;
   font-weight: 400;
   transition: transform 0.3s ease;
 }
 
-.descricao:hover, .descricao-conquistas-campanha:hover, .descricao-conquistas-nivel:hover, .texto-conquista:hover {
+.descricao:hover,
+.descricao-conquistas-campanha:hover,
+.descricao-conquistas-nivel:hover,
+.texto-conquista:hover {
   transform: translateY(-2px);
 }
 
@@ -189,10 +198,11 @@ html, body {
   text-align: left;
   font-family: "Livvic", sans-serif;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 100%;
   font-weight: 400;
   align-self: stretch;
 }
+
 .imagedescricao {
   border-radius: 9px;
   align-self: stretch;
@@ -204,8 +214,8 @@ html, body {
 }
 
 .imagedescricao:hover {
-  transform: scale(1.05); 
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3); /
+  transform: scale(1.05);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);/
 }
 
 .conquistas-campanha {
@@ -217,15 +227,19 @@ html, body {
   justify-content: flex-start;
   flex: 1;
 }
-.titulo-campanha, .titulo-nivel {
+
+.titulo-campanha,
+.titulo-nivel {
   text-align: left;
   font-family: "Livvic", sans-serif;
   font-size: 18px;
-  line-height: 140%;
+  line-height: 100%;
   font-weight: 400;
   align-self: stretch;
 }
-.conteudo-conquistas-campanha, .conteudo-conquistas-nivel {
+
+.conteudo-conquistas-campanha,
+.conteudo-conquistas-nivel {
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -234,9 +248,12 @@ html, body {
   justify-content: flex-start;
   align-self: stretch;
 }
-.descricao-conquistas-campanha, .descricao-conquistas-nivel {
+
+.descricao-conquistas-campanha,
+.descricao-conquistas-nivel {
   align-self: stretch;
 }
+
 .conquistas-camp {
   display: flex;
   flex-direction: column;
@@ -245,8 +262,9 @@ html, body {
   justify-content: flex-start;
   align-self: stretch;
 }
+
 .caixa-conquista {
-  background: rgba(138, 112, 144, 0.7); 
+  background: rgba(138, 112, 144, 0.7);
   border-radius: 9px;
   padding: 10px;
   display: flex;
@@ -286,7 +304,8 @@ html, body {
   align-items: flex-start;
   justify-content: flex-start;
   flex: 1;
-} 
+}
+
 .conquistas-niv {
   display: flex;
   flex-direction: column;
@@ -295,6 +314,7 @@ html, body {
   justify-content: flex-start;
   align-self: stretch;
 }
+
 .descricao-inuksuit {
   background: linear-gradient(180deg, rgba(138, 112, 144, 0.7), rgba(188, 35, 55, 0.7));
   border-radius: 9px;
@@ -302,8 +322,8 @@ html, body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  min-width: 250px; 
-  max-width: 1000px; 
+  min-width: 250px;
+  max-width: 1000px;
 }
 
 .inuksuit2,
@@ -316,18 +336,18 @@ html, body {
 
 .inuksuit2 {
   font-size: 20px;
-  line-height: 1.4; 
+  line-height: 1.4;
 }
 
 .text-conq-inuksuit {
   font-size: 14px;
-  line-height: 1.4; 
+  line-height: 1.4;
 }
 
 
 .linha-estatuas {
   display: flex;
-  gap: 20px; 
+  gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
   max-width: 1300px;
@@ -339,7 +359,7 @@ html, body {
   text-align: left;
   font-family: "Livvic", sans-serif;
   font-size: 16px;
-  line-height: 1.4; 
+  line-height: 1.4;
 }
 
 
@@ -347,7 +367,7 @@ html, body {
 .imageestatua-1314 {
   border-radius: 9px;
   width: 100%;
-  height: auto; 
+  height: auto;
   object-fit: cover;
 }
 
@@ -366,15 +386,15 @@ html, body {
   border-radius: 9px;
   width: 100%;
   max-width: 400px;
-  height: auto; 
+  height: auto;
   object-fit: cover;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .imageestatua:hover,
 .imageestatua-1314:hover {
-  transform: scale(1.05); 
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); 
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
 }
 
 .estatua,
@@ -384,7 +404,7 @@ html, body {
   flex-direction: column;
   gap: 10px;
   align-self: center;
-  transition: box-shadow 0.3s ease; 
+  transition: box-shadow 0.3s ease;
 }
 
 
@@ -396,8 +416,8 @@ html, body {
   flex-direction: column;
   flex-direction: column;
   gap: 10px;
-  min-width: 250px; 
-  max-width: 1000px; 
+  min-width: 250px;
+  max-width: 1000px;
 }
 
 .titulo-maca,
@@ -410,7 +430,7 @@ html, body {
 
 .titulo-maca {
   font-size: 20px;
-  line-height: 1.4; 
+  line-height: 1.4;
 }
 
 .text-macas {
@@ -428,7 +448,7 @@ html, body {
 
 .maca {
   flex: 1 1 100%;
-  max-width: 400px; 
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -444,8 +464,8 @@ html, body {
 }
 
 .imagemaca:hover {
-  transform: scale(1.05); 
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3); 
+  transform: scale(1.05);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 .desc-maca {
@@ -487,11 +507,11 @@ html, body {
 .linha-aves {
   display: flex;
   justify-content: center;
-  flex-wrap:wrap ;
+  flex-wrap: wrap;
 }
 
 .passaro {
-  flex: 1 0 32%; 
+  flex: 1 0 32%;
   min-width: 250px;
   max-width: 300px;
   display: flex;
@@ -501,7 +521,7 @@ html, body {
 
 .titulo-passaro {
   font-size: 16px;
-  line-height: 1.4; 
+  line-height: 1.4;
 }
 
 .desc-passaro {
@@ -513,42 +533,40 @@ html, body {
 
 .imagepassaro {
   border-radius: 9px;
-  width: 100%; 
-  height: auto; 
+  width: 100%;
+  height: auto;
   align-items: center;
   object-fit: cover;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .imagepassaro:hover {
-  transform: scale(1.05); 
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3); 
+  transform: scale(1.05);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 
 .tempestadedeareia,
 .enguia2 {
-  display: inline-flex; 
-  flex-direction: column; 
-  flex: 1; 
-  min-width: 250px; 
+  display: inline-flex;
+  flex-direction: column;
+  flex: 1;
+  min-width: 250px;
   max-width: 1000px;
 }
 
 .tempestadedeareia {
-  background: linear-gradient(
-    180deg,
-    rgba(138, 112, 144, 0.7) 0%,
-    rgba(238, 160, 148, 0.7) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(138, 112, 144, 0.7) 0%,
+      rgba(238, 160, 148, 0.7) 100%);
   border-radius: 9px;
   padding: 10px;
   gap: 10px;
   align-items: flex-start;
   justify-content: flex-start;
-  flex: 1; 
-  min-width: 250px; 
-  max-width: 1000px; 
+  flex: 1;
+  min-width: 250px;
+  max-width: 1000px;
 }
 
 .titulo-tempestade {
@@ -559,6 +577,7 @@ html, body {
   font-weight: 400;
   align-self: stretch;
 }
+
 .text-tempestade2 {
   text-align: left;
   font-family: "Livvic", sans-serif;
@@ -567,21 +586,21 @@ html, body {
   font-weight: 400;
   align-self: stretch;
 }
+
 .enguia2 {
-  background: linear-gradient(
-    180deg,
-    rgba(138, 112, 144, 0.7) 0%,
-    rgba(89, 157, 194, 0.7) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(138, 112, 144, 0.7) 0%,
+      rgba(89, 157, 194, 0.7) 100%);
   border-radius: 9px;
   padding: 10px;
   gap: 10px;
   align-items: flex-start;
   justify-content: flex-start;
   flex: 1;
-  min-width: 250px; 
+  min-width: 250px;
   max-width: 1000px;
 }
+
 .titulo-enguia {
   text-align: left;
   font-family: "Livvic", sans-serif;
@@ -591,6 +610,7 @@ html, body {
   position: relative;
   align-self: stretch;
 }
+
 .text-enguia2 {
   text-align: left;
   font-family: "Livvic", sans-serif;
@@ -600,6 +620,7 @@ html, body {
   position: relative;
   align-self: stretch;
 }
+
 .descricao-fases {
   background: linear-gradient(180deg, rgba(138, 112, 144, 0.7) 0%, rgba(253, 249, 246, 0.49) 100%);
   border-radius: 9px;
@@ -654,7 +675,7 @@ html, body {
 }
 
 .imagefase-icon:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
@@ -671,14 +692,14 @@ html, body {
 
 .imagefase {
   border-radius: 9px;
-  width: 380px;  
-  height: 240px; 
-  object-fit: cover; 
+  width: 380px;
+  height: 240px;
+  object-fit: cover;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .imagefase:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
 
@@ -699,19 +720,18 @@ html, body {
 
 
 .imgs-fase-2 {
-  display: flex; 
-  flex-direction: row; 
-  gap: 30px; 
-  justify-content: center; 
-  flex-wrap: wrap; 
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.colecionador, .text-infancia {
-  background: linear-gradient(
-    180deg,
-    rgba(138, 112, 144, 0.7) 0%,
-    rgba(199, 145, 110, 0.7) 100%
-  );
+.colecionador,
+.text-infancia {
+  background: linear-gradient(180deg,
+      rgba(138, 112, 144, 0.7) 0%,
+      rgba(199, 145, 110, 0.7) 100%);
   border-radius: 9px;
   padding: 10px;
   display: flex;
@@ -723,21 +743,10 @@ html, body {
   position: relative;
 }
 
-.text-infancia{
-  background: linear-gradient(
-    180deg,
-    rgba(138, 112, 144, 0.7) 0%,
-    rgba(54, 52, 115, 0.7) 100%
-  );
-}
-
-.titulo {
-  text-align: left;
-  font-family: "Livvicr", sans-serif;
-  font-size: 20px;
-  line-height: 140%;
-  font-weight: 400;
-  align-self: stretch;
+.text-infancia {
+  background: linear-gradient(180deg,
+      rgba(138, 112, 144, 0.7) 0%,
+      rgba(54, 52, 115, 0.7) 100%);
 }
 
 .desc {
@@ -749,7 +758,8 @@ html, body {
   align-self: stretch;
 }
 
-.desc-span, .desc-span2 {
+.desc-span,
+.desc-span2 {
   font-family: "Livvic", sans-serif;
   font-size: 14px;
   line-height: 140%;
@@ -759,27 +769,28 @@ html, body {
 .desc-span2 {
   color: #ff0825;
 }
+
 .imageinfancia {
   border-radius: 9px;
-  width: 380px; 
-  height: 240px; 
+  width: 380px;
+  height: 240px;
   display: block;
-  margin: 20px auto; 
-  padding: 0; 
-  object-fit: cover; 
-  overflow: hidden; 
+  margin: 20px auto;
+  padding: 0;
+  object-fit: cover;
+  overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 .imageinfancia:hover {
-  transform: scale(1.05); 
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3); 
+  transform: scale(1.05);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
+
 footer {
-  background: linear-gradient(
-    180deg,
-    rgba(45, 25, 118, 1) 0%,
-    rgba(46, 26, 86, 1) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(45, 25, 118, 1) 0%,
+      rgba(46, 26, 86, 1) 100%);
   padding: 24px 80px 24px 80px;
   display: flex;
   flex-direction: row;
@@ -790,6 +801,7 @@ footer {
   position: relative;
   box-shadow: inset 0px 7px 7px 0px rgba(0, 0, 0, 0.17);
 }
+
 .feito-por-nicole-julek-klazura {
   color: #fcf7ff;
   text-align: left;
@@ -800,6 +812,7 @@ footer {
   position: relative;
   flex: 1;
 }
+
 .social-icons {
   display: flex;
   flex-direction: row;
@@ -809,6 +822,7 @@ footer {
   flex: 1;
   position: relative;
 }
+
 .icones {
   flex-shrink: 0;
   width: 24px;
@@ -824,37 +838,38 @@ footer {
 
 @media (max-width: 1200px) {
   .navbar-tipo-1 {
-    padding: 0px 40px; 
-    height: auto; 
+    padding: 0px 40px;
+    height: auto;
   }
 
   .silk-shadows {
-    font-size: 24px; 
-    width: auto; 
+    font-size: 24px;
+    width: auto;
   }
 
   .links {
-    width: 100%; 
-    flex-direction: column; 
-    gap: 20px; 
+    width: 100%;
+    flex-direction: column;
+    gap: 20px;
   }
 
   .titulo {
-    font-size: 28px; 
+    font-size: 28px;
   }
 
   .linha {
-    padding: 10px 30px; 
+    padding: 10px 30px;
   }
 
-  .linha-macas{
+  .linha-macas {
     flex-wrap: wrap;
-    flex-direction: column; 
+    flex-direction: column;
     align-self: center;
   }
 
-  .imagemaca, .imagemaca:hover {
-    height: auto; 
+  .imagemaca,
+  .imagemaca:hover {
+    height: auto;
     width: 100%;
   }
 
@@ -876,7 +891,8 @@ footer {
     height: 100%;
   }
 
-  .silk-shadows, .guias {
+  .silk-shadows,
+  .guias {
     font-size: 20px;
     width: auto;
     text-align: center;
@@ -888,34 +904,38 @@ footer {
   }
 
   .linha {
-    padding: 10px 10px; 
+    padding: 10px 10px;
   }
 
-  .conteudo-linha-1{
+  .conteudo-linha-1 {
     flex-direction: column;
     flex-wrap: wrap;
   }
 
   .links {
-    flex-direction: column; 
-    gap: 10px; 
+    flex-direction: column;
+    gap: 10px;
   }
 
   .linha-estatuas {
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
     gap: 10px;
   }
 
   .linha-5-estatuas {
-    padding: 0 10px; 
+    padding: 0 10px;
   }
+
   .linha-macas {
-    padding: 10px 20px; 
+    padding: 10px 20px;
   }
-  .imagemaca, .imagemaca:hover {
-    height: auto; 
-    width: 100%; 
+
+  .imagemaca,
+  .imagemaca:hover {
+    height: auto;
+    width: 100%;
   }
+
   .passaro {
     flex: 1 0 100%;
   }
