--- a/disco.css
+++ b/disco.css
@@ -51,8 +51,8 @@ body {
     font-size: 14px;
     z-index: 1000;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-  
+}
+
 
 .navbar-tipo-1 {
     background: linear-gradient(180deg, rgba(138, 112, 144, 1) 0%, #626868 100%);
@@ -656,6 +656,14 @@ footer {
 }
 
 @media (max-width: 480px) {
+    html,
+    body {
+        background: url('./imagens/disco_img/disco-elysium-guia-conquistas1.png') center;
+        background-attachment: fixed;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
     .navbar-tipo-1 {
         flex-direction: column;
         padding: 20px;
@@ -669,7 +677,7 @@ footer {
         align-self: center;
     }
 
-    .imagensdescricao{
+    .imagensdescricao {
         flex-direction: column;
         flex-wrap: wrap;
     }
@@ -693,19 +701,19 @@ footer {
         gap: 5px;
     }
 
-    .conqtirah{
+    .conqtirah {
         width: 380px;
         flex-direction: column;
         align-self: center;
     }
 
-    .conqpadrao{
+    .conqpadrao {
         width: 380px;
         padding: 10px 0px;
         align-self: center;
     }
 
-    .descpadrao{
+    .descpadrao {
         padding: 10px 10px;
         width: 400px;
     }
@@ -752,6 +760,7 @@ footer {
     .navbar-tipo-1 {
         padding: 0px 80px;
     }
+
     .silk-shadows {
         font-size: 30px;
         width: 400px;
