--- a/gris.css
+++ b/gris.css
@@ -885,6 +885,14 @@ footer {
 }
 
 @media (max-width: 480px) {
+
+  html, body{
+  background: url('./imagens/gris_img/gris-guia-conquistas1.png') center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
+
   .navbar-tipo-1 {
     flex-direction: column;
     padding: 20px;
