--- a/chrono.css
+++ b/chrono.css
@@ -563,7 +563,11 @@ footer {
 @media (max-width: 480px) {
   html,
   body {
-    background: url('./imagens/chrono_img/chrono-trigger-guia-conquistas1.png') center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background: url('./imagens/chrono_img/chrono-trigger-guia-conquistas1.PNG') center;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
